load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1beta1",
    srcs = [
        "CORSConfiguration_types.go",
        "accelerateConfiguration_types.go",
        "bucket_types.go",
        "doc.go",
        "lifecycleConfiguration_types.go",
        "loggingConfiguration_types.go",
        "notificationConfiguration_types.go",
        "referencers.go",
        "register.go",
        "replicationConfiguration_types.go",
        "requestPaymentConfiguration_types.go",
        "serverSideEncryption_types.go",
        "tagging_types.go",
        "versioningConfiguration_types.go",
        "websiteConfiguration_types.go",
        "zz_generated.deepcopy.go",
        "zz_generated.managed.go",
        "zz_generated.managedlist.go",
        "zz_generated.resolvers.go",
    ],
    importpath = "github.com/crossplane-contrib/provider-aws/apis/s3/v1beta1",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/iam/v1beta1",
        "//apis/kms/v1alpha1",
        "//apis/notification/v1alpha1",
        "//apis/sqs/v1beta1",
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_crossplane_crossplane_runtime//pkg/reference",
        "@com_github_crossplane_crossplane_runtime//pkg/resource",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)
