load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "acm",
    srcs = ["certificate.go"],
    importpath = "github.com/crossplane-contrib/provider-aws/pkg/clients/acm",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/acm/v1beta1",
        "//pkg/clients",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_acm//:acm",
        "@com_github_aws_aws_sdk_go_v2_service_acm//types",
    ],
)

go_test(
    name = "acm_test",
    srcs = ["certificate_test.go"],
    embed = [":acm"],
    deps = [
        "//apis/acm/v1beta1",
        "//pkg/clients",
        "@com_github_aws_aws_sdk_go_v2_service_acm//:acm",
        "@com_github_aws_aws_sdk_go_v2_service_acm//types",
        "@com_github_aws_smithy_go//document",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
