load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dbsubnetgroup",
    srcs = ["dbsubnetgroup.go"],
    importpath = "github.com/crossplane-contrib/provider-aws/pkg/clients/dbsubnetgroup",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/database/v1beta1",
        "//pkg/clients",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_rds//:rds",
        "@com_github_aws_aws_sdk_go_v2_service_rds//types",
    ],
)
