load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ec2",
    srcs = [
        "address.go",
        "flowlogs.go",
        "instance.go",
        "internetgateway.go",
        "natgateway.go",
        "routetable.go",
        "securitygroup.go",
        "securitygroup_diff.go",
        "securitygrouprule.go",
        "subnet.go",
        "vpc.go",
        "vpccidrblock.go",
    ],
    importpath = "github.com/crossplane-contrib/provider-aws/pkg/clients/ec2",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/ec2/manualv1alpha1",
        "//apis/ec2/v1beta1",
        "//pkg/clients",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//:ec2",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//types",
        "@com_github_aws_smithy_go//:smithy-go",
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
    ],
)

go_test(
    name = "ec2_test",
    srcs = [
        "address_test.go",
        "ec2_test.go",
        "instance_test.go",
        "internetgateway_test.go",
        "natgateway_test.go",
        "routetable_test.go",
        "securitygroup_diff_test.go",
        "securitygroup_test.go",
        "subnet_test.go",
        "vpc_test.go",
        "vpccidrblock_test.go",
    ],
    embed = [":ec2"],
    deps = [
        "//apis/ec2/manualv1alpha1",
        "//apis/ec2/v1beta1",
        "//pkg/clients",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//:ec2",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//types",
        "@com_github_aws_smithy_go//:smithy-go",
        "@com_github_aws_smithy_go//document",
        "@com_github_crossplane_crossplane_runtime//pkg/test",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
    ],
)
