load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ecr",
    srcs = [
        "repository.go",
        "repository_policy.go",
    ],
    importpath = "github.com/crossplane-contrib/provider-aws/pkg/clients/ecr",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/ecr/v1beta1",
        "//pkg/clients",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_ecr//:ecr",
        "@com_github_aws_aws_sdk_go_v2_service_ecr//types",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
    ],
)

go_test(
    name = "ecr_test",
    srcs = [
        "repository_policy_test.go",
        "repository_test.go",
    ],
    embed = [":ecr"],
    deps = [
        "//apis/ecr/v1beta1",
        "//pkg/clients",
        "@com_github_aws_aws_sdk_go_v2_service_ecr//:ecr",
        "@com_github_aws_aws_sdk_go_v2_service_ecr//types",
        "@com_github_aws_smithy_go//document",
        "@com_github_crossplane_crossplane_runtime//pkg/test",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
    ],
)
